# voter

./: Cargo.toml  Makefile  README.md  index.html
src/: app.rs
