[package]
name = "voter"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.32"
getrandom = { version = "0.2", features = ["js"] }
itertools = "0.10.5"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
tallystick = "0.4.3"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = [ "HtmlSelectElement", "HtmlOptionElement" ] }
yew = { version = "0.20", features = ["csr"] }

